2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/w32api.h (WindowsVista): Define.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iptypes.h (IP_ADAPTER_*): Define parts that depend
	on SOCKET_ADDRESS only if winsock2.h has already been included.

2006-04-06  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (WM_IME_*): Remove. Defined in imm.h.

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iphlpapi.h (GAA_FLAG_*): Define.
	(GetAdaptersAddresses): Add function declaration.
	* lib/iphlpapi.def (GetAdaptersAddresses): Add function stub.
	Thanks to:    ross <rossboulet at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/iptypes.h (IP_INTERFACE_NAME_INFO,
	IP_ADAPTER_ANYCAST_ADDRESS,IP_ADAPTER_MULTICAST_ADDRESS,
	IP_ADAPTER_UNICAST_ADDRESS,IP_ADAPTER_DNS_SERVER_ADDRESS,
	IP_ADAPTER_PREFIX,IP_ADAPTER_ADDRESSES): Add structures.
	(IF_OPER_STATUS,IP_DAD_STATE,IP_PREFIX_ORIGIN,IP_SUFFIX_ORIGIN,
	SCOPE_LEVEL): Add enums.
	(IP_ADAPTER_*): Define.

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (GetWindowExtEx): Removed, belongs to wingdi.h.
	Thanks to:    Sergey Philippov <phis at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/objidl.h (PIDSI_*): Define.
	(PRSPEC_*): Define.
	Thanks to:    Oliver Stoeneberg <kidkat at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winbase.h (LOGON32_PROVIDER_WINNT40,
	LOGON32_PROVIDER_WINNT50, LOGON32_LOGON_NETWORK,
	LOGON32_LOGON_UNLOCK, LOGON32_LOGON_NETWORK_CLEARTEXT,
	LOGON32_LOGON_NEW_CREDENTIALS): Define.
	Thanks to:    Oliver Stoeneberg <kidkat at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mq.h: New file.